Wed Jun 30 20:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/PropList.h: Tidied for garbage collection.
	* Source/include/Unicode.h: Added missing prototyp.

Tue Jun 29 17:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Patches by Hai Henningsen
	* Source/NSString.m: Fix for stringByAppendingPathExtension
	* Source/Unicode.m: Several bugfixes in AND logic.

Mon Jun 28 11:48:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSConnection.h: Fixed spelling error reported by 
	Olivier.Saut@dptmaths.ens-cachan.fr
	* Source/NSConnection.m: ditto

Sat Jun 26  7:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRunLoop.m: Fix error in last mod.
	* Source/NSTask.m: Allow for bsd setpgrp()
	* Souyrce/configure.in: Allow for bsd setpgrp()

Fri Jun 25 11:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRunLoop.m: Use autorelease pools in ([limitDateForMode:])
	and ([acceptInputForMode:beforeDate:])

Thu Jun 24 20:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/GSIMap.h: Tweaks to avoid compiler warnings.
	* Source/include/NSNotification.h: ditto.
	* Source/propList.h: ditto.
	* Source/Collection.m: ditto.
	* Source/TcpPort.m: ditto.
	* Source/UnixFileHandle.m: ditto.
	* Source/NSArchiver.m: ditto.
	* Source/NSArchiver.m: ditto.
	* Source/NSCalendarDate.m: ditto.
	* Source/NSCoder.m: ditto.
	* Source/NSConcreteValue.m: ditto.
	* Source/NSConnection.m: ditto.
	* Source/NSData.m: ditto.
	* Source/NSDate.m: ditto.
	* Source/NSDictionary.m: ditto.
	* Source/NSDistributedNotificationCenter.m: ditto.
	* Source/NSGAttributedString.m: ditto.
	* Source/NSGCountedSet.m: ditto.
	* Source/NSGCString.m: ditto.
	* Source/NSGDictionary.m: ditto.
	* Source/NSHost.m: ditto.
	* Source/NSLock.m: ditto.
	* Source/NSNotificationCenter.m: ditto.
	* Source/NSNotificationQueue.m: ditto.
	* Source/NSNumber.m: ditto.